Select contacts on click rather than adding them immediately. Fix spacing too.
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@60465 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_contacts.scss
+++ b/src/main/resources/scss/_contacts.scss
@@ -859,7 +859,7 @@ div.contact-buttons {
                         border: none;
                     }
 
-                    &.remove-contact{
+                    &.remove-contact, &.selected{
                         color: #3fb3f6;
                         background: none;
                         border: none;
